WIP: changes in text with new (offset) models

--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -206,12 +206,28 @@
   number = {4}
 }
 
+@article{boshuizenFittingAdditivePoisson2010,
+  title = {Fitting Additive {{Poisson}} Models},
+  author = {Boshuizen, Hendriek C. and Feskens, Edith JM},
+  year = {2010},
+  month = jul,
+  volume = {7},
+  pages = {4},
+  issn = {1742-5573},
+  doi = {10.1186/1742-5573-7-4},
+  abstract = {This paper describes how to fit an additive Poisson model using standard software. It is illustrated with SAS code, but can be similarly used for other software packages.},
+  file = {/home/julien/Documents/ZoteroLibrary/Boshuizen_Feskens_2010_Fitting additive Poisson models.pdf},
+  journal = {Epidemiologic Perspectives \& Innovations},
+  number = {1}
+}
+
 @article{brooksGlmmTMBBalancesSpeed2017,
   title = {{{glmmTMB}} Balances Speed and Flexibility among Packages for Zero-Inflated Generalized Linear Mixed Modeling},
   author = {Brooks, Mollie E. and Kristensen, Kasper and {van Benthem}, Koen J. and Magnusson, Arni and Berg, Casper W. and Nielsen, Anders and Skaug, Hans J. and Maechler, Martin and Bolker, Benjamin M.},
   year = {2017},
   volume = {9},
   pages = {378--400},
+  file = {/home/julien/Documents/ZoteroLibrary/Brooks et al_2017_glmmTMB balances speed and flexibility among packages for zero-inflated.pdf},
   journal = {The R Journal},
   keywords = {R package,statistics},
   number = {2}
@@ -728,7 +744,7 @@
   abstract = {Background Although a standard taxonomy of organisms has existed for nearly 300 years, no consensus has yet been reached on principles for systematization of ecological diversity (i.e., the co-ordinated variation of abiotic and biotic components of natural diversity). In a rapidly changing world, where nature is under constant pressure, standardized terms and methods for characterization of ecological diversity are urgently needed (e.g., to enhance precision and credibility of global change assessments). Aim The aim is to present the EcoSyst framework, a set of general principles and methods for systematization of natural diversity that simultaneously addresses biotic and abiotic variation, and to discuss perspectives opened by this framework. Innovation EcoSyst provides a framework for systematizing natural variation in a consistent manner across different levels of organization. At each ecodiversity level, EcoSyst principles can be used to establish: (a) an extensive attribute system with descriptive variables that cover all relevant sources of variation; (b) a hierarchical-type system; and (c) a set of guidelines for land-cover mapping that is consistent across spatial scales. EcoSyst type systems can be conceptualized as multidimensional models, by which a key characteristic (the response) is related to variation in one or more key sources of variation (predictors). EcoSyst type hierarchies are developed by a gradient-based iterative procedure, by which the ``ecodiversity distance'' (i.e., the extent to which the key characteristic differs between adjacent candidate types) is standardized and the ecological processes behind observed patterns are explicitly taken into account. Application We present ``Nature in Norway'' (NiN), an implementation of the EcoSyst framework for Norway for the ecosystem and landscape levels of ecodiversity. Examples of applications to research and management are given. Conclusion The EcoSyst framework provides a theoretical platform, principles and methods that can complement and enhance initiatives towards a global-scale systematics of ecodiversity.},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.13164},
   copyright = {\textcopyright{} 2020 The Authors. Global Ecology and Biogeography published by John Wiley \& Sons Ltd},
-  file = {/home/julien/Documents/ZoteroLibrary/Halvorsen et al__Towards a systematics of ecodiversity.pdf},
+  file = {/home/julien/Documents/ZoteroLibrary/geb13164-sup-0001-supinfo.pdf;/home/julien/Documents/ZoteroLibrary/Halvorsen et al__Towards a systematics of ecodiversity.pdf},
   journal = {Global Ecology and Biogeography},
   keywords = {biodiversity,multivariate,systematics},
   language = {en},
@@ -836,7 +852,7 @@
   copyright = {\textcopyright{} 2019 The Authors. Applied Vegetation Science published by John Wiley \& Sons Ltd on behalf of International Association for Vegetation Science},
   file = {/home/julien/Documents/ZoteroLibrary/Horvath et al_2019_Distribution modelling of vegetation types based on area frame survey data.pdf},
   journal = {Applied Vegetation Science},
-  keywords = {SDM,To read},
+  keywords = {model complexity,presence-absence,prevalence,SDM},
   language = {en},
   number = {4}
 }
@@ -1610,7 +1626,6 @@
 }
 
 @article{volleringBunchingBackgroundBetters2019,
-  ids = {vollering2019},
   title = {Bunching up the Background Betters Bias in Species Distribution Models},
   author = {Vollering, Julien and Halvorsen, Rune and Auestad, Inger and Rydgren, Knut},
   year = {2019},
@@ -1725,6 +1740,34 @@
   number = {6}
 }
 
+@incollection{zuurGLMGAMCount2009,
+  title = {{{GLM}} and {{GAM}} for {{Count Data}}},
+  booktitle = {Mixed {{Effects Models}} and {{Extensions}} in {{Ecology}} with {{R}}},
+  author = {Zuur, Alain F and Ieno, Elena N and Walker, Neil J and Saveliev, Anatoly A and Smith, Graham M},
+  year = {2009},
+  pages = {209--244},
+  publisher = {{Springer Science+Business Media}},
+  address = {{NewYork, USA}},
+  file = {/home/julien/Documents/ZoteroLibrary/Zuur et al_2009_Mixed effects models and extensions in ecology with R.pdf},
+  isbn = {978-0-387-87457-9},
+  keywords = {statistics},
+  series = {Statistics for {{Biology}} and {{Health}}}
+}
+
+@book{zuurMixedEffectsModels2009,
+  ids = {zuurMixedEffectsModels2009a},
+  title = {Mixed Effects Models and Extensions in Ecology with {{R}}},
+  author = {Zuur, Alain F and Ieno, Elena N and Walker, Neil and Saveliev, Anatoly A and Smith, Graham M},
+  editor = {Gail, M and Krickeberg, K and Samet, J and Tsiatis, A and Wong, W},
+  year = {2009},
+  publisher = {{Springer New York}},
+  address = {{New York, NY}},
+  doi = {10.1007/978-0-387-87458-6},
+  file = {/home/julien/Documents/ZoteroLibrary/Zuur et al_2009_Mixed effects models and extensions in ecology with R.pdf},
+  isbn = {978-0-387-87457-9},
+  keywords = {statistics}
+}
+
 @incollection{zuurZeroTruncatedZeroInflatedModels2009,
   title = {Zero-{{Truncated}} and {{Zero}}-{{Inflated Models}} for {{Count Data}}},
   booktitle = {Mixed {{Effects Models}} and {{Extensions}} in {{Ecology}} with {{R}}},
@@ -1735,6 +1778,7 @@
   address = {{NewYork, USA}},
   file = {/home/julien/Documents/ZoteroLibrary/Zuur et al_2009_Mixed effects models and extensions in ecology with R.pdf},
   isbn = {978-0-387-87457-9},
+  keywords = {statistics},
   series = {Statistics for {{Biology}} and {{Health}}}
 }
 
